# lacuchara

./: .dockerignore  .env.example  .gitignore  BUSINESS_LOGIC_FLOW.md  CAMBIOS_INTERFAZ.md  CHANGES_SUMMARY.md  COMPARISON_CHART.md  DASHBOARD_PREVIEW.md  DEPLOYMENT-QUICKSTART.md  DEPLOYMENT_SUMMARY.md  DOCKER-BUILD-COMPLETE.md  DOCKER-DEPLOY.md  DOCKER-SETUP.txt  Dockerfile  FRONTEND_API_INTEGRATION.md  IMPLEMENTATION_DETAILS.md  INDEX.md  LINKEDIN_SETUP.md  MODEL_ISSUE_ANALYSIS.md  NAVIGATION_MAP.md  PREMIUM_MENU_CARD_DELIVERY.md  QUICK_REFERENCE.md  README.md  README_PREMIUM_MENU_CARD.md  README_RESTAURANT_DETAIL.md  REFACTORING_COMPLETE.md  REFACTORING_HOMEPAGE.md  RESTAURANT_DETAIL_DELIVERY.md  SERVER_INSTRUCTIONS.md  SISTEMA_VINCULADO.md  STATIC_FILES_CONFIG.md  UPDATES.md  USER_GUIDE.md  azure-deploy.sh  check_logos.py  check_table.py  clean_ratings.py  create_fact_logs_table.py  docker-compose.yml  get_restaurant.py  (+16 more)
backend/: .env.example  __init__.py  pyproject.toml  requirements.txt
backend/api/: main.py  main_original.py
backend/core/: __init__.py  auth.py  blob_storage.py  engine.py  manager.py  menu_intelligence.py  pipeline.py  scheduler.py
backend/csv/: menu_history_clean.csv
backend/db/: __init__.py  database.py  models.py  schema.sql
backend/ml-training/: README.md
backend/notebooks_research/: Analisis_Interactivo_Estres_Modelo.ipynb  analisis_estres_modelo.py  probar_ia.py  tester_interactivo.py
backend/scripts/: reindex_menu_tables.py  verify_menu_tables.py
backend/tests/: manual_test.py  test_core.py  test_integration.py  test_menu_intelligence.py  test_validation.py
(+213 files in other folders)
