[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azca"
version = "0.1.0"
description = "Model-as-a-Service prediction engine for restaurant predictions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adnan", email = "adnanhamidoun@gmail.com"}
]

dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.3",
    "scikit-learn==1.5.2",
    "scipy==1.10.1",
    "azureml-automl-core==1.62.0",
    "azureml-automl-runtime==1.62.0",
    "azureml-core==1.61.0.post1",
    "azureml-train-automl-client==1.62.0",
    "azureml-train-automl-runtime==1.62.0",
    "azure-ai-documentintelligence==1.0.2",
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.20",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "jupyter==1.0.0",
    "jupyter_client==8.8.0",
    "ipykernel==7.2.0",
    "black==24.1.1",
    "flake8==7.1.0",
    "mypy==1.13.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/azca"
Repository = "https://github.com/tu-usuario/azca.git"

[tool.setuptools]
packages = ["azca"]

[tool.pytest.ini_options]
testpaths = ["azca/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
